# plugin-calculator

./: .gitignore  CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/funccos/: CMakeLists.txt  funccos.cpp
plugins/funcdeg/: CMakeLists.txt
plugins/funcln/: CMakeLists.txt  funcln.cpp
plugins/funcsin/: CMakeLists.txt
plugins/plugins_source/: funcdeg.cpp  funcpow.cpp  funcsin.cpp
src/: Evaluator.cpp  Evaluator.hpp  OperatorTable.hpp  Parser.cpp  Parser.hpp  PluginManager.cpp  PluginManager.hpp  Rpn.cpp  Rpn.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  WinDynamicLibrary.hpp  main.cpp
src/app/: main.cpp
src/eval/: Evaluator.cpp  Evaluator.hpp
src/parser/: OperatorInfo.hpp  OperatorTable.cpp  Parser.cpp  Parser.hpp
src/platform/: IDynamicLibrary.hpp  WinDynamicLibrary.cpp
src/plugin_manager/: PluginAPI.hpp  PluginManager.cpp  PluginManager.hpp
src/rpn/: Rpn.cpp  Rpn.hpp
src/tokens/: Tokenizer.cpp  Tokenizer.hpp
